--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -18,7 +18,7 @@ const links = [
   class="monospace flex flex-row justify-between p-4 pb-[20vh] text-black md:pb-[40vh]"
 >
   <div transition:animate="none" transition:persist>
-    <h1 class="responsive-title max-w-[60ch] pb-8 font-bold text-balance">
+    <h1 class="responsive-title max-w-[60ch] pb-8 font-medium text-balance">
       <a href="/" class="!no-underline">{SITE_DESCRIPTION}</a>
     </h1>
     <details class="news-section">
