Add vercel config

--- a/src/components/utils/Media.astro
+++ b/src/components/utils/Media.astro
@@ -8,9 +8,7 @@ const cdnPrefix = import.meta.env.DEV
   ? base
   : "https://cdn.jsdelivr.net/gh/munusshih/munusshih.com@main/public";
 
-const finalSrc = src.startsWith("/")
-  ? `${cdnPrefix}${src}`
-  : src;
+const finalSrc = src.startsWith("/") ? `${cdnPrefix}${src}` : src;
 const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
 ---
 
@@ -33,10 +31,8 @@ const posterSrc = "posters" + src.replace(/\.(mp4|webm|ogg)$/i, ".jpg");
     </video>
   ) : (
     <Image
-      width={1920}  // Placeholder value, use most common width
-      height={1080}  // Placeholder value for aspect ratio
       src={finalSrc}
-      alt={'hey'}
+      alt={"hey"}
       class={`h-auto w-full object-cover ${cropped ? "[clip-path:inset(3px)]" : ""}`}
     />
   )
