--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -11,7 +11,7 @@ const html = marked(markdown);
 
 <footer client:load class="p-4 pt-20" transition:persist>
   <div
-    class="footnote code max-w-[40ch] py-8 pr-4 text-gray-600 prose-p:text-[12px]"
+    class="footnote code fade-in max-w-[40ch] py-8 pr-4 text-gray-600 prose-p:text-[12px]"
     set:html={html}
   />
   <div
