--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -9,19 +9,20 @@ const base = import.meta.env.BASE_URL;
 const currentPage = Astro.url.pathname; // Get the current page's pathname
 const links = [
   { href: `${base}`, label: "Home" },
+  { href: `${base}encyclopedia`, label: "Encyclopedia" },
   { href: `${base}lab`, label: "Laboratory" },
   { href: `${base}about`, label: "About" },
 ];
 ---
 
-<nav
-  class="monospace flex flex-row justify-between p-4 pb-[20vh] text-black md:pb-[40vh]"
->
+<nav class="monospace flex flex-row justify-between p-4 pb-20 text-[black]">
   <div transition:animate="none" transition:persist>
-    <h1 class="responsive-title max-w-[60ch] pb-8 font-medium text-balance">
+    <h1
+      class="responsive-title fade-in max-w-[60ch] pb-8 font-medium text-balance"
+    >
       <a href="/" class="!no-underline">{SITE_DESCRIPTION}</a>
     </h1>
-    <details class="news-section">
+    <details class="news-section fade-in">
       <summary class="sans cursor-pointer text-[blue]"
         >NEWS
         <div class="mt-4 h-[80px] w-[80px]">
@@ -41,8 +42,8 @@ const links = [
       </div>
     </details>
   </div>
-  <div class="responsive-title flex w-max flex-col items-end">
-    <ul class="w-max border-t pt-2 pl-4 leading-tight">
+  <div class="sans fade-in flex w-max flex-col items-end">
+    <ul class="w-max pl-4 leading-tight">
       {
         links.map((link) => (
           <li key={link.href}>
