--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -19,5 +19,6 @@ const { title, description, image } = Astro.props;
     <slot />
     <Footer />
     <Overscroll />
+    <script src="../scripts/fadeIn.js"></script>
   </body>
 </html>
