--- a/src/components/global/HeroSketch.astro
+++ b/src/components/global/HeroSketch.astro
@@ -1,2 +1,2 @@
-<div id="sketch-container" class="fade-in h-20 w-20"></div>
+<div id="sketch-container" class="h-20 w-20 invert"></div>
 <script src="../../scripts/clock.js"></script>
