--- a/src/layouts/Basic.astro
+++ b/src/layouts/Basic.astro
@@ -14,11 +14,12 @@ const { title, description, image } = Astro.props;
   <head>
     <BaseHead title={title} description={description} image={image} />
   </head>
-  <body>
+  <body class="relative flex flex-col">
     <Header />
     <slot />
     <Footer />
-    <Overscroll />
+    <!-- <Overscroll /> -->
     <script src="../scripts/fadeIn.js"></script>
+    <script src="../scripts/smoothTransition.js"></script>
   </body>
 </html>
