--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,102 +1,100 @@
-<!-- ---
+---
+import { marked } from "marked"; // install via npm i marked
+import BasicLayout from "./Basic.astro";
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "@/components/BaseHead.astro";
-import Header from "@/components/Header.astro";
-import Footer from "@/components/Footer.astro";
-import FormattedDate from "@/components/FormattedDate.astro";
+type Props = CollectionEntry<"work">["data"];
 
-type Props = CollectionEntry<"blog">["data"];
+const {
+  title,
+  description,
+  quote,
+  excerpt,
+  recognition = [],
+  roles,
+  tags,
+  date,
+  heroImage,
+} = Astro.props;
 
-const { title, description, pubDate, tags, updatedDate, heroImage, roles } =
-  Astro.props;
+const parsedDescription = description ? marked.parseInline(description) : null;
+const parsedExcerpt = excerpt ? marked.parseInline(excerpt) : null;
+const parsedRecognition = recognition.map((item) => marked.parseInline(item));
 ---
 
-<html lang="en">
-  <head>
-    <BaseHead title={title} description={description} />
-    <style>
-      .hero-image {
-        width: 100%;
-      }
-      .hero-image img {
-        display: block;
-        margin: 0 auto;
-        width: 100%;
-      }
-      .prose {
-        margin: auto;
-        max-width: 100%;
-        color: rgb(var(--gray-dark));
-      }
-      .title {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin-bottom: 1em;
-        padding: 1em 0;
-        line-height: 1.25;
-        text-align: left;
-      }
-      .title h1 {
-        margin: 0 0 0.5em 0;
-      }
-      .date {
-        margin-bottom: 0.5em;
-        color: rgb(var(--gray));
-      }
-      .last-updated-on {
-        font-style: italic;
-      }
+<BasicLayout>
+  <main class="body-text">
+    <div class="grid grid-cols-3 px-2 py-4">
+      <h1 class="title text-4xl leading-tight">{title}</h1>
 
-      ul {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2rem;
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-      }
+      <p>
+        {
+          roles && roles.length > 0 && (
+            <span class="">{`${roles.join(", ")}`}</span>
+          )
+        }
+      </p>
+      <h2>{date}</h2>
+    </div>
+    <video
+      class="mb-20 aspect-[16/9] h-auto w-full overflow-hidden bg-black"
+      controls
+      src={heroImage}
+      poster={heroImage}
+      loading="lazy"></video>
+    <article class="grid grid-cols-2">
+      <div class="sticky top-0 flex flex-col gap-16 self-start px-2 py-4">
+        {
+          parsedDescription && (
+            <section>
+              <h2 class="subtitle">Description</h2>
+              <p
+                class="body-text columns-2 text-pretty"
+                set:html={parsedDescription}
+              />
+            </section>
+          )
+        }
 
-      .date-tags {
-        display: flex;
-        color: rgb(var(--gray));
-      }
+        {
+          parsedExcerpt && (
+            <section>
+              <h2 class="body-text mb-4 font-semibold uppercase underline underline-offset-4">
+                Excerpt
+              </h2>
+              <div class="grid grid-cols-2">
+                <p class="body-text text-pretty" set:html={parsedExcerpt} />
+              </div>
+            </section>
+          )
+        }
 
-      .date-tags ul {
-        display: flex;
-        gap: 0.25em;
-        margin-right: 0.25em;
-      }
-    </style>
-  </head>
+        {
+          recognition.length > 0 && (
+            <section>
+              <h2 class="body-text mb-4 font-semibold uppercase underline underline-offset-4">
+                Recognition
+              </h2>
+              <ul class="body-text list-inside list-decimal space-y-1">
+                {parsedRecognition.map((item) => (
+                  <li set:html={item} />
+                ))}
+              </ul>
+            </section>
+          )
+        }
+      </div>
+      <div class="flex flex-col gap-4 pt-4 prose-img:mb-2">
+        <slot />
+      </div>
+    </article>
 
-  <body>
-    <Header />
-    <main>
-      <article>
-        <div class="title">
-          <h1>{title}</h1>
-          <div class="description">
-            {description}<br /><br />{roles.map((role) => <li>{role},</li>)}
-          </div>
-          <div class="date-tags">
-            <ul>
-              {tags.map((tag) => <li>{tag},</li>)}
-            </ul>
-            <FormattedDate date={pubDate} />
-          </div>
-        </div>
-        <div class="hero-image">
-          {
-            heroImage && (
-              <img width={1020} height={510} src={heroImage} alt="" />
-            )
-          }
-        </div>
-        <div class="prose">
-          <slot />
-        </div>
-      </article>
-    </main>
-    <Footer />
-  </body>
-</html> -->
+    <div class="mt-20 flex flex-row gap-4 px-2 py-4">
+      <button class="w-full border-t border-r px-2 py-4">
+        <a href="/lab">Last Project</a>
+      </button>
+      <button class="w-full border-t border-r px-2 py-4">
+        <a href="/lab">Next Project</a></button
+      >
+    </div>
+  </main>
+</BasicLayout>
