--- a/src/pages/encyclopedia.astro
+++ b/src/pages/encyclopedia.astro
@@ -5,64 +5,33 @@ import LabCard from "@/components/LabCard.astro";
 import labCards from "@/docs/lab.yml";
 import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
 
-const allTags = [...new Set(labCards.flatMap((card) => card.tags))];
+import { getCollection } from "astro:content";
+const workItems = await getCollection("work");
 ---
 
 <BasicLayout title={`Lab — ${SITE_TITLE}`} description={SITE_DESCRIPTION}>
   <main class="w-full px-4">
-    <!-- Tag Filter UI -->
-    <div
-      id="tag-filters"
-      class="sans body-text fade-in mb-6 flex flex-wrap gap-x-4"
-    >
-      <button class="tag-button active cursor-pointer" data-tag="all"
-        >All</button
-      >
-      {
-        allTags.map((tag) => (
-          <button class="tag-button cursor-pointer" data-tag={tag}>
-            {tag}
-          </button>
-        ))
-      }
-    </div>
-
     <div
       class="grid grid-cols-1 items-start gap-x-4 gap-y-8 md:grid-cols-3 md:gap-y-20 lg:grid-cols-5"
     >
       {
-        labCards.map((card) => (
-          <LabCard
-            title={card.title}
-            description={card.description}
-            href={card.href}
-            image={card.image}
-            imageAlt={card.imageAlt}
-            tags={card.tags}
-          />
+        workItems.map((item) => (
+          <div>
+            <h2>{item.data.title}</h2>
+            <p>{item.data.description}</p>
+            <img src={item.data.heroImage} alt={item.data.title} />
+            <p>
+              <strong>Roles:</strong> {item.data.roles.join(", ")}
+            </p>
+            <p>
+              <strong>Tags:</strong> {item.data.tags.join(", ")}
+            </p>
+            <p>
+              <strong>Date:</strong> {item.data.pubDate.toDateString()}
+            </p>
+          </div>
         ))
       }
     </div>
   </main>
 </BasicLayout>
-
-<script is:inline>
-  const buttons = document.querySelectorAll(".tag-button");
-  const cards = document.querySelectorAll("[data-tags]");
-
-  console.log(buttons, cards);
-
-  buttons.forEach((btn) => {
-    btn.addEventListener("click", () => {
-      const tag = btn.dataset.tag;
-      buttons.forEach((b) => b.classList.remove("active"));
-      btn.classList.add("active");
-
-      cards.forEach((card) => {
-        const cardTags = card.dataset.tags.split(",");
-        const show = tag === "all" || cardTags.includes(tag);
-        card.style.display = show ? "" : "none";
-      });
-    });
-  });
-</script>
