--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,26 +1,34 @@
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
-main {
-  background: white;
-}
-
-nav {
-  background: white;
-}
-
-footer {
-  background: white;
+:root {
+  --accent-color: blue;
+  --grid-color: rgba(0, 0, 0, 0.5);
 }
 
 body {
-  background: white;
+  background-position: 15px 15px;
+  background-size: 6vw 6vw;
+  background-attachment: fixed;
   min-height: 100dvh;
 }
 
 html,
 body {
-  overscroll-behavior: auto; /* or unset if you want to restore default behavior */
+  overflow-x: hidden;
+  font-size: 16px;
+  line-height: 1.25;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
+
+a:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.2em;
+}
+
+img,
+video {
+  width: 100%;
 }
 
 img.dithered {
@@ -47,18 +55,6 @@ img.dithered {
   font-optical-sizing: auto;
 }
 
-p {
-  @apply max-w-[70ch] text-pretty;
-}
-
-a {
-  @apply underline underline-offset-3;
-}
-
-a:hover {
-  @apply cursor-pointer text-[blue] no-underline;
-}
-
 @layer utilities {
   .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -68,14 +64,67 @@ a:hover {
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
+
+  .heading1 {
+    font-weight: normal;
+    font-size: clamp(1.5rem, 2vw + 1rem, 2vw + 1rem);
+    @apply leading-[95%] font-semibold tracking-tighter;
+  }
+
+  .heading3 {
+    font-weight: normal;
+    font-size: clamp(1rem, 1vw + 1rem, 1vw + 1rem);
+  }
+
+  .body1 {
+    font-size: 16px;
+    @apply leading-[110%] tracking-tight;
+  }
+
+  .body2 {
+    font-size: clamp(14px, 1vw, 16px);
+    @apply leading-[95%] tracking-tight;
+  }
+
+  .linkout::after {
+    content: " ↗";
+    font-size: 0.8em;
+  }
+
+  .x1-card {
+    width: 20vw;
+    min-width: 150px;
+  }
+
+  .x2-card {
+    width: 30vw;
+    min-width: 250px;
+  }
+
+  .x3-card {
+    width: 40vw;
+    min-width: 250px;
+  }
+
+  @media (max-width: 767px) {
+    .x1-card,
+    .x2-card,
+    .x3-card {
+      width: 100%;
+    }
+  }
+
+  .menu-textsize {
+    font-size: clamp(2rem, 6vw, 6vw);
+  }
 }
 
 .responsive-title {
-  font-size: clamp(1.5rem, 2vw + 1rem, 3rem);
+  font-size: 1rem;
 }
 
 .body-text {
-  font-size: clamp(14px, 1vw + 0.5rem, 16px);
+  font-size: 1rem;
 }
 
 .no-before-after::before,
@@ -98,4 +147,8 @@ a:hover {
 
 .fade-in {
   opacity: 0;
+}
+
+.subtitle {
+  @apply mb-4 font-semibold uppercase underline underline-offset-4;
 }
