--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -11,7 +11,7 @@ const workItems = await getCollection("work");
 
 <BasicLayout title={`Lab — ${SITE_TITLE}`} description={SITE_DESCRIPTION}>
   <main class="w-full px-4">
-    <div
+    <!-- <div
       class="grid grid-cols-1 items-start gap-x-4 gap-y-8 md:grid-cols-3 md:gap-y-20 lg:grid-cols-5"
     >
       {
@@ -32,6 +32,6 @@ const workItems = await getCollection("work");
           </div>
         ))
       }
-    </div>
+    </div> -->
   </main>
 </BasicLayout>
